<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <EditText
                android:id="@+id/emailInput"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:inputType="textEmailAddress"/>
        <EditText
                android:id="@+id/passwordInput"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:inputType="textWebPassword"/>
        <EditText
                android:id="@+id/nameInput"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/ageInput"
                android:hint="@string/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:inputType="number"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button
                    android:id="@+id/signUpButton"
                    android:text="@string/button_sign_up"
                    android:layout_width="@dimen/fullSizedButton"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/backButton"
                    android:text="@string/button_back"
                    android:layout_width="@dimen/fullSizedButton"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>