<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
    >

        <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/signInButton"
                    android:text="@string/button_sign_in"
                    android:layout_width="@dimen/partSizedButton"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/intentSignUpButton"
                    android:text="@string/button_sign_up"
                    android:layout_width="@dimen/partSizedButton"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>